@@ -1,0 +1,5 @@
+-3.673419846319648462 E-40
+-4.701977403289150032 E-38
+-3.232609464761290647 E-38
+0.E-38 + 3.306077861687683616 E-39*I
+Total time spent: 3
