@@ -68,6 +68,7 @@ PB   23- [libpari] F2xqM_F2xqC_gauss F2xqM_F2xqC_invimage F2xqM_gauss F2xqM_invi
      24- new GP function polrootsbound
 HC   25- new GP functions prodeulerrat, sumeulerrat, sumaltrat, sumnumrat,
          prodnumrat
+HC   26- new GP function zetahurwitz
 
   Changed
       1- rewrite bnfnarrow
